fix Navbar on Mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ header h4 {
 		height: 100% !important;
 	}
 
-	#navbarTop {
+	#topNav {
 		position: unset;
 	}
 }
